infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
# This "metadata" gives a label for that actual deployment itself
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
  #  matchLabel: tells what pods the deployment will apply to.
    matchLabels:
      app: auth
  template:
  # "template" is explaining how each POD inside of the deployment will be created.
  # The "template" is actually a pod Template. It describes a pod that is launched.
    metadata:
      labels:
        app: auth
    spec: 
      containers:
        - name: auth 
          image: gcr.io/cheffer-285816/auth
---
# AUTH SERVICE  DEFINITION

apiVersion: v1
kind: Service 
metadata:
  name: auth-srv
spec:
  selector:
    # Describes to which deployment this service applied.
    app: auth
  ports:
    - name: auth
      protocol: TCP 
      port: 3000
      targetPort: 3000
